# wavez

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: game-state.c  game-state.h  main.c  render.c  render.h  update.c  update.h
src/features/: enemy.c  enemy.h  entities.c  entities.h  entity-type.c  entity-type.h  game-map.c  game-map.h  swarm.c  swarm.h
